src/objects/IT_Workflows__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISAS_Server_Type__c</fullName>
        <label>ISAS Server Type</label>
        <picklist>
            <picklistValues>
                <fullName>AD-EM-00057155 General SAS user desktop access(Xemu-sftgrd-sas-Desktop-Prod) (対応ファイル：SAS Desktop - JPOK.ica)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD-EM-00054924 XEMU-SFTGRD-SAS-SASUser -- SAS application on CCSS (対応ファイル：SAS 8 For Windows - JPO1.ica)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <defaultValue>$User.Office_Location_Name__c</defaultValue>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Accident_Description__c</fullName>
        <label>Other Accident Description</label>
        <picklist>
            <picklistValues>
                <fullName>Breakage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spillage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Police_Report_Number__c</fullName>
        <label>Police Report Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Police_Station__c</fullName>
        <inlineHelpText>Police station where you reported the loss/theft</inlineHelpText>
        <label>Police Station</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secure_Id_Type__c</fullName>
        <label>Secure Id Type</label>
        <picklist>
            <picklistValues>
                <fullName>DDWorks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDWorks21-UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDWORKS21-Users</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Some Help Text</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this request is on behalf of another user, please select the user name. Otherwise leave this field blank.</inlineHelpText>
        <label>User Details</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Workflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IT Workflow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Type__c</columns>
        <columns>User_Details__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ITAPP-{0000000}</displayFormat>
        <label>IT Workflows Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>ISAS_Server_IT_Approval</fullName>
        <active>true</active>
        <label>ISAS Server IT Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>ISAS_Server_User_Request</fullName>
        <active>true</active>
        <label>ISAS Server User Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Device_Accident_Form</fullName>
        <active>true</active>
        <label>Mobile Device Accident Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>SecureId_IT_Approval</fullName>
        <active>true</active>
        <label>SecureId IT Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>SecureId_User_Request</fullName>
        <active>true</active>
        <label>SecureId User Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>